login page done

--- a/css/f_style.css
+++ b/css/f_style.css
@@ -21,12 +21,10 @@ ul{
 }
 .footer{
 	background-color: #000000;
-	position: fixed;
+	position: relative;
     padding: 70px 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	flex: 0 0 auto;
+	
+	
 }
 
 .footer-col{
