--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ li,a,button{
     font-weight: 500;
     font-size: 16px;
     text-decoration: none;
+    color: rgb(255, 255, 255);
 }
 
 header{
@@ -26,11 +27,11 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 10px 10%;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     border: 1px solid;
     box-shadow: 5px 10px 8px #888888;
     color: black;
-    font-weight: 16px;
+    font-weight: 500;
 }
 
 .topLogo{
