Index page changed

--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -34,6 +34,53 @@
     color: rgb(255, 255, 255);
     background-color: transparent;
 }
+.NewIdea{
+    background-color: rgb(15, 236, 236);
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.lastTitle1{
+    position: absolute;
+    text-align: center;
+    top: 20%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    font-size: 100px;
+    color: rgb(255, 255, 255);
+    background-color: transparent;
+}
+
+.lastTitle2{
+    position: absolute;
+    text-align: center;
+    top: 20%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+    font-size: 100px;
+    color: rgb(255, 255, 255);
+    background-color: transparent;
+}
+
+.innerDetails{
+    font-size: 20px;
+    margin-top: 50px;
+}
+
+.improveSkill{
+    background-color: rgb(66, 156, 149);
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.descript{
+    margin-top: 100px;
+    margin-bottom: 100px;
+    padding-bottom: 0px;
+}
+.descImage{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
 
 .learnMore{
     text-align: center;
