--- a/css/t_style.css
+++ b/css/t_style.css
@@ -143,7 +143,7 @@ span{
 
 .midbody img {
   width: 100%;
-  z-index: -1;
+  /*z-index: -1;*/
   margin: auto;
   transform: scale(1);
   transition: all ease-in-out 0.5s;
