--- a/css/profile.css
+++ b/css/profile.css
@@ -7,7 +7,7 @@
     font-family: 'Exo 2', sans-serif;;
 }
 body{
-    background-color: #2f3640;
+    background-color: #212121;
 }
 .profile-header{
     background-color:#576574;
