--- a/css/softStyle.css
+++ b/css/softStyle.css
@@ -1,15 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body{	
 		background: url("../images/datasharing.png")no-repeat center;
 	    background-color: #6aa9d0;  
-		background-position:  70% 90%;
+		background-position:  70% 70%;
 		
+}
+:root {
+	--primary-c: #2196F3;
+	--secondary-c: #B2D7F5;
+	
+	--white: #FDFBFB;
+	
+	--text: #082943;	
+	--bg: var(--primary-c);
 }
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+}
+
+h5{
+  margin-left: 15px;
+  color: #fff;
 }
 
 midbody {
@@ -34,7 +49,7 @@ midbody {
 	
 }
 h2{
-	color:#fff;
+	color:#082943;
 }
 
 
@@ -57,8 +72,16 @@ input{
 	font-size:  18px;
 	margin-left:auto;
 }
+
+input .form-check-input{
+  min-height: 30px;
+  min-width: 30px;
+
+}
+
 .details{
 	font-family: "Roboto", sans-serif;
+  border-radius: 20px;
 	font-size: 24px;
 	line-height: 23px;
 	letter-spacing: 0.05em;
@@ -73,68 +96,6 @@ input{
   margin: 25px;
 }
 
-.tags {
-  list-style: none;
-  margin: 0;
-  overflow: hidden; 
-  padding: 0;
-}
-
-.tags li {
-  float: left; 
-}
-.tags input{
-  min-height: 20px;
-	min-width:  20px;
-	font-size:  40px;
-	margin-left:none;
-}
-
-.tag {
-  background: #eee;
-  border-radius: 3px 0 0 3px;
-  color: #999;
-  display: inline-block;
-  height: 26px;
-  line-height: 26px;
-  padding: 0 20px 0 23px;
-  position: relative;
-  margin: 0 10px 10px 0;
-  text-decoration: none;
-  transition: color 0.2s;
-}
-
-.tag::before {
-  background: #6aa9d0;
-  border-radius: 10px;
-  box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
-  content: '';
-  height: 6px;
-  left: 10px;
-  position: absolute;
-  width: 6px;
-  top: 10px;
-}
-
-.tag::after {
-  background: #6aa9d0;
-  border-bottom: 13px solid transparent;
-  border-left: 10px solid #eee;
-  border-top: 13px solid transparent;
-  content: '';
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.tag:hover {
-  background-color: #5141e7;
-  color: white;
-}
-
-.tag:hover::after {
-   border-left-color:  #5141e7;
-}
 
 button {
   margin-top: 15px;
@@ -167,3 +128,114 @@ li{
   list-style: none;
   margin-left: 15px;
 }
+ul {
+	list-style-type: none;
+	padding-left: 50px;
+	margin: 0;
+}
+
+li {
+	display: block;
+	position: relative;
+	padding: 20px 0px;
+}
+
+h2 {
+	margin: 10px 0;
+	font-weight: 900;
+}
+
+
+/* Card
+–––––––––––––––––––––––––––––––––––––––––––––––––– 
+.genre {
+	display: flex;
+	flex-direction: column;	
+	background: var(--white);
+	width: 300px;
+	padding: 20px 25px;
+	border-radius: 20px;
+	box-shadow: 0 19px 38px rgba(0, 0, 0, 0.13);
+}
+*/
+.genre {
+  width: 350px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 5px 5px 30px rgba(0,0,0,0.2);
+}
+
+.genre .box {
+  padding: 20px 30px;
+  background: #fff;
+  border-radius: 10px;
+}
+.genre .box label {
+  display: flex;
+  height: 53px;
+  width: 100%;
+  align-items: center;
+  border: 1px solid lightgray;
+  border-radius: 50px;
+  margin: 10px 0;
+  padding-left: 20px;
+  cursor: default;
+  transition: all 0.3s ease;
+}
+#option-1:checked ~ .option-1,
+#option-2:checked ~ .option-2,
+#option-3:checked ~ .option-3
+{
+  background: #0f4ce4;
+  border-color: #0f4ce4;
+}
+.genre .box label .dot {
+  height: 20px;
+  width: 20px;
+  background: #d9d9d9;
+  border-radius: 50%;
+  position: relative;
+  transition: all 0.3s ease;
+}
+#option-1:checked ~ .option-1 .dot,
+#option-2:checked ~ .option-2 .dot,
+#option-3:checked ~ .option-3 .dot
+ {
+  background: #fff;
+}
+.box label .dot::before{
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%)scale(2);
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  transition: all 0.3s ease;
+}
+#option-1:checked ~ .option-1 .dot::before,
+#option-2:checked ~ .option-2 .dot::before,
+#option-3:checked ~ .option-3 .dot::before
+ {
+  background: #0f4ce4;
+  transform: translate(-50%, -50%) scale(1);
+}
+.genre .box label .text{
+  color: #0f4ce4;
+  font-size: 18px;
+  font-weight: 400;
+  padding-left: 10px;
+  transition: color 0.3s ease;
+}
+#option-1:checked ~ .option-1 .text,
+#option-2:checked ~ .option-2 .text,
+#option-3:checked ~ .option-3 .text
+{
+  color: #fff;
+}
+.genre .box input[type="radio"]{
+  display: none;
+}
+
+
