--- a/css/devTeamStyle.css
+++ b/css/devTeamStyle.css
@@ -45,6 +45,15 @@
 	background-size: cover;
 }
 
+.grid4{  
+   
+	background: url("../images/noman2.jpg")no-repeat center;  
+	margin-top: 100px;
+	height: 350px;  
+	width: 350px;
+	background-size: cover;
+}
+
 .Text{ 
 	
    
